org.eclipse.jdt.compiler.apt.tests/processors/org/eclipse/jdt/compiler/apt/tests/processors/negative/NegativeModelProc#collectElements().mjava
	/**
	 * Collect some elements that will be reused in various tests
	 * @return true if all tests passed
	 */
	private boolean collectElements() {
		_elementN1 = _elementUtils.getTypeElement("targets.negative.pa.Negative1");
		if (null == _elementN1 || _elementN1.getKind() != ElementKind.CLASS) {
			reportError("Element Negative1 was not found or was not a class");
			return false;
		}
		_elementN2 = _elementUtils.getTypeElement("targets.negative.pa.Negative2");
		if (null == _elementN2 || _elementN2.getKind() != ElementKind.CLASS) {
			reportError("Element Negative2 was not found or was not a class");
			return false;
		}
		_elementN3 = _elementUtils.getTypeElement("targets.negative.pa.Negative3");
		if (null == _elementN3 || _elementN3.getKind() != ElementKind.CLASS) {
			reportError("Element Negative3 was not found or was not a class");
			return false;
		}
		// TODO: try collecting a nested or secondary type that extends a missing type
		return true;
	}

